--- a/templates/input_form.html
+++ b/templates/input_form.html
@@ -17,6 +17,9 @@
             <input type="number" id="weight" name="weight" step="0.01" required>
             <button type="submit">Calculate BMI</button>
         </form>
+        {% if error %}
+        <p style="color: red;">{{ error }}</p>
+        {% endif %}
     </div>
 </body>
 </html>
